# agent-release-gate-v0.3.0

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.pytest_cache/v/cache/: nodeids
alembic/: env.py
alembic/versions/: 20260320_0001_initial.py
app/: main.py  seed.py
app/api/: routes.py
app/core/: config.py  security.py
app/db/: models.py  session.py
app/services/: exceptions.py  policy.py  responses.py  schemas.py  utils.py  workflow.py
app/static/: style.css
app/templates/: admin_login.html  error.html  index.html
docs/: architecture.md  install.md  testing.md
scripts/: docker-entrypoint.sh
tests/: conftest.py  test_api.py  test_policy.py  test_ui.py  test_workflow.py
